admin-dashboard.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
.container {
    display:grid;
    grid-template-columns: repeat(5, 200px);
    grid-template-rows: repeat(5, 170px);
}

.sidebar {
    background-color: #6495ED;
    display:grid;
    grid-column: 1 / 2;
    grid-row: 1 / 6;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(14, 1fr);
}

.dashboard {
    display: grid;
    grid-template-columns: 25% repeat(3,1fr);
    grid-column: 1 / 5;
    grid-row: 1 / 2;
}

.dashboard > img , .topmenu > * > img , .botmenu > * > img {
    height: 20px;
    width: auto;
    grid-column: 1/2;
    place-self: center;
}

.dashboard > p, .topmenu > * > p , .botmenu > * > p {
    display:grid;
    color:white;
    grid-column: 2 / 3;
    align-items:center;
}

.topmenu {
    display:grid;
    grid-template-columns: repeat(4,25%);
    grid-template-rows: repeat(6,1fr);
    grid-column: 1 / 5;
    grid-row: 3 / 8;
}

.home {
    grid-row: 1 / 2;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.profile {
    grid-row: 2 / 3;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.messages {
    grid-row: 3 / 4;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.history {
    grid-row: 4 / 5;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.tasks {
    grid-row: 5 / 6;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.communities {
    grid-row: 6 / 7;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.botmenu {
    display: grid;
    grid-column: 1 / 5;
    grid-row: 9 / 12;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3,1fr);
}

.settings {
    grid-row: 1 / 2;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.support {
    grid-row: 2 / 3;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.privacy {
    grid-row: 3 / 4;
    grid-column: 1 / 5;
    display:grid;
    grid-template-columns: 25% repeat(3,1fr);
}

.header {
    background-color:white;
    display: grid;
    grid-column: 2 / 6;
    grid-row: 1 / 2 ;
    box-shadow: 0 8px 6px -6px darkgray;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
}

.searchbar {
    display:grid;
    grid-column: 1 / 3;
    grid-template-columns: 10% 1fr;
    place-self: center;
    width: 80%;
}

.searchbar > img {
    background-color:black;
    height: 30px;
    width: auto;
    /* grid-column: 1/2; */
    /* place-self: center; */
}

.searchbar > input {
    background-color: lightgray;
    border: none;
    border-radius: 15px;
    display:grid;
    place-self:center;
    width: 100%;
    height: 100%;
}

.profilebar {
    display:grid;
    grid-column: 3 / 4;
    place-self:center;
    grid-template-columns: 25% 25% 1fr;
    gap: 5%;
}

.profilebar > img {
    background-color:black;
    height: 30px;
    width: auto;
    place-self:center;
}

/* .main {
    background-color: lightgray;
    display:grid;
    grid-column: 2 / 6;
    grid-row: 2 / 6;
} */

